# OCR

./: .gitignore  db.sqlite3  pyproject.toml
data/: labels.json
ocr_app/: medicines.json  tests.py  urls.py  views.py
ocr_project/: settings.py  urls.py
tester/: test.py
