[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Junnyjun <chbe5082@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
transformers = "^4.46.0"
torch = "^2.5.0"
pillow = "^11.0.0"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
